...
  "Freelance",
  "Investment",
  "Other Income"
];

const EXPENSE_CATEGORIES = [
  "Food & Dining",
  "Transportation",
  "Shopping",
  "Entertainment",
  "Bills & Utilities",
  "Healthcare",
  "Education",
...
Keyboard.dismiss();
}}
>
<View style={{ marginTop: 16 }}>

<TextInput
placeholder="Search transactions..."
style={styles.search}
value={search}
onChangeText={setSearch}
/>
</View>

...
<Modal visible={editModalVisible} transparent animationType="fade">
  <View style={styles.editModalOverlay}>
  <View style={styles.editModalCard}>

    {/* HEADER */}
    <Text style={{ fontSize: 20, fontWeight: "700", marginBottom: 20 }}>
      Edit Transaction
    </Text>

    {/* TYPE SWITCH */}
    <View style={styles.segment}>
      <Pressable
        style={[
...
        </Text>
      </Pressable>
    </View>

    {/* DESCRIPTION */}
    <Text style={{ marginTop: 10, marginBottom: 3, fontWeight: "600" }}>
      Description
    </Text>
    <TextInput
      value={editDescription}
      onChangeText={setEditDescription}
      placeholder="Description"
      style={styles.search}
...
    />

    {/* CATEGORY (ONLY FOR EXPENSE) */}
{editType === "expense" ? (
  <>
    <Text style={{ marginTop: 10, fontWeight: "600" }}>
      Category
    </Text>

    <View style={styles.categoryContainer}>
      {EXPENSE_CATEGORIES.map((cat) => {
        const selected = editCategory === cat;

...
    {/* SAVE */}
    <Pressable
      style={styles.primaryButton}
      onPress={updateTransaction}
    >
      <Text style={styles.primaryButtonText}>
        Save Changes
      </Text>
    </Pressable>

    {/* CANCEL */}
    <Pressable
      style={styles.secondaryButton}
...
            setEditModalVisible(false);
            confirmSingleDelete(editingTransaction.id);
          }
        }}
      >
        <Text style={styles.deleteActionText}>
          Delete Transaction
        </Text>
      </Pressable>
    </View>

  </View>
  </View>
...
        <Text style={{
          fontSize: 16,
          fontWeight: "700",
          marginBottom: 12,
          textAlign: "center"
        }}>
          Confirm Delete
        </Text>

        <Text style={{
          fontSize: 14,
          color: "#6B7280",
          marginBottom: 16,
...

        <Pressable
          style={styles.menuItem}
          onPress={executeDelete}
        >
          <Text style={[styles.menuText, { color: "#DC2626", fontWeight: "700" }]}>
            Delete
          </Text>
        </Pressable>

      </View>
    </View>
  </TouchableWithoutFeedback>
...

<Pressable
style={styles.secondaryButton}
onPress={()=>router.push("/ManualTransactionScreen")}
>
<Text style={styles.secondaryButtonText}>
Add Manually
</Text>
</Pressable>

</View>

</TouchableWithoutFeedback>
...
