...
            {/* 
          Receipt capture screen:
          Uses the default stack header, but overrides the title shown in the header bar.
        */}
        <Stack.Screen
          name="ManualTransactionScreen"
          options={{ title: "Manual Transaction", headerTitleAlign: "center", headerTitleStyle: { fontSize: 20, fontWeight: "800" } }}
        />

        <Stack.Screen
          name="profile"
          options={{ title: "Profile", headerTitleAlign: "center", headerTitleStyle: { fontSize: 20, fontWeight: "800" } }}
        />
...
